force-app/main/default/objects/Change_Order__c/fields/CO_Amount__c.field-meta.xml
<CustomField>
    <fullName>CO_Amount__c</fullName>
    <label>Change Order Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>