force-app/main/default/objects/Change_Order__c/fields/CO_Description__c.field-meta.xml
<CustomField>
    <fullName>CO_Description__c</fullName>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>