force-app/main/default/objects/Change_Order__c/fields/CO_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>CO_PO_Number__c</fullName>
    <label>CO PO Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>