force-app/main/default/objects/Change_Order__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>