force-app/main/default/objects/Change_Order__c/listViews/All_Change_Orders.listView-meta.xml
<ListView>
    <fullName>All_Change_Orders</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>CO_Amount__c</columns>
    <columns>Date_Received__c</columns>
    <columns>CO_PO_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Change Orders</label>
</ListView>